--- a/languages/wishlist-for-woo-en_US .pot
+++ b/languages/wishlist-for-woo-en_US .pot
@@ -1,8 +1,8 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Wishlist for Woocommerce\n"
-"POT-Creation-Date: 2021-03-23 16:21+0530\n"
+"Project-Id-Version: Wishlist for WooCommerce\n"
+"POT-Creation-Date: 2021-03-25 13:14+0530\n"
 "PO-Revision-Date: 2021-03-22 19:50+0530\n"
 "Last-Translator: \n"
 "Language-Team: MakeWebBetter\n"
@@ -28,7 +28,7 @@ msgstr ""
 
 #: admin/class-wishlist-for-woo-admin.php:191
 #: admin/class-wishlist-for-woo-admin.php:192 wishlist-for-woo.php:220
-msgid "Wishlist For Woocommerce"
+msgid "Wishlist For WooCommerce"
 msgstr ""
 
 #: admin/class-wishlist-for-woo-admin.php:203
@@ -52,7 +52,7 @@ msgid "Write permission needed!"
 msgstr ""
 
 #: admin/class-wishlist-for-woo-admin.php:482
-msgid "File moved succesfully"
+msgid "File moved successfully"
 msgstr ""
 
 #: admin/partials/templates/wishlist-for-woo-overview.php:18
@@ -269,7 +269,7 @@ msgid "public/icons/"
 msgstr ""
 
 #: includes/class-wishlist-for-woo-template-manager.php:33
-msgid "Wishlist for Woocommerce"
+msgid "Wishlist for WooCommerce"
 msgstr ""
 
 #: includes/class-wishlist-for-woo-template-manager.php:91
